feat: common_nats_test_interface